# sage-monorepo

./: .Rbuildignore  .Rprofile  .claudeignore  .dockerfilelintrc  .dockerignore  .env.example  .eslintignore  .eslintrc.json  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .hadolint.yaml  .hintrc  .mcp.json  .pre-commit-config.yaml  .prettierignore  .prettierrc  .prettierrc.yml  .stylelintignore  .worktreeinclude  .yamllint  .yarnrc.yml  404.html  AGORA_AI_VISUALIZATION_INSIGHTS_PLAN.md  CLAUDE.md  CODE_QUALITY.md  CONTRIBUTING.md  DESCRIPTION  Dockerfile  LICENSE  LICENSE.md  NAMESPACE  OPENCHALLENGES_AUTH_IMPLEMENTATION_PLAN.md  OPENCHALLENGES_CLIENT_ARCHITECTURE.md  Pipfile  README.md  basic_math.py  bixarena-api-test-commands.sh  build.gradle  build.gradle.kts  (+44 more)
apps/agora/data/: .env.example  Dockerfile  README.md  project.json  pyproject.toml
apps/agora/data/src/: main.py
apps/agora/locust/: README.md  project.json  pyproject.toml
apps/agora/locust/src/: locustfile.py  locustfile_rna_differential_expression.py
apps/bixarena/ai-service/: .env.example  .openapi-generator-ignore  Dockerfile  README.md  docker-compose.yaml  docker-entrypoint.sh  openapi.yaml  openapitools.json  project.json  pyproject.toml  requirements.txt  setup.cfg
apps/bixarena/ai-service/.openapi-generator/: FILES
apps/bixarena/ai-service/bixarena_ai_service/: __main__.py  app.py  cache.py  classifier.py  config.py  main.py  security_api.py
apps/bixarena/ai-service/tests/: conftest.py  test_battle_categorization_api.py  test_battle_validation_api.py  test_chat_api.py  test_health_check_api.py  test_health_check_impl.py  test_prompt_categorization_api.py  test_prompt_validation_api.py
apps/bixarena/app/: .env.example  .gitignore  Dockerfile  Dockerfile.new  README.md  SESSION_AUTH.md  SIMPLIFIED_AUTH.md  backfill-battle-categorizations.sh  backfill-prompt-categorizations.sh  backfill-validations.sh  demo-quest-api.sh  docker-entrypoint.sh  entrypoint.sh  generate_model_config.py  jest.config.ts  model_config.template.json  models.json  models.template.json  playwright.config.ts  project.json  pyproject.toml  quick-test-jwt.sh  run_models_api.py  server.ts  start_fastchat.py  test_auth.py  test_jwt_auth.py  tsconfig.json  tsconfig.spec.json
apps/bixarena/app/bixarena_app/: README.md  __init__.py  __main__.py  main.py  opengraph.py
apps/bixarena/app/docker/: docker-compose.yml
apps/bixarena/app/docs/: awq.md  dataset_release.md  exllama_v2.md  gptq.md  lightllm_integration.md  openai_api.md  server_arch.md  vicuna_weights_version.md  vllm_integration.md
apps/bixarena/app/playground/: deepspeed_config_s3.json
apps/bixarena/app/service/: models_api.py
apps/bixarena/app/src/: app.py  index.html  main.py  styles.scss  test-setup.ts
apps/bixarena/app/tmp/: project.json.off
apps/bixarena/infra/cdk/: .env.dev.example  .env.example  .env.prod.example  .env.stage.example  .gitignore  README.md  cdk.context.json  cdk.json  project.json  pyproject.toml
apps/bixarena/tools/: .env.example  BRADLEY_TERRY_DECOUPLING.md  BT_METRIC_README.md  DEEP_COMPARISON_ANALYSIS.md  README.md  bt_final_test.json  project.json  pyproject.toml  run_rate_limit_tests.sh
apps/bixarena/tools/bixarena_tools/: __init__.py  bt_eval.py  bt_metric.py  cli.py  cli_run_bt_eval.py  evaluation.py  generate_leaderboard.py  generate_leaderboard_cli.py  hello.py  main.py  mock_bt_data.py  mock_data.py  rank_battle.py  ranking_metric.py  run_evaluation.py  simulate_battle_votes.py
apps/bixarena/tools/docs/: INTERPRETING_RESULTS.md  LOAD_TESTING_README.md  RATE_LIMIT_TESTING.md
apps/bixarena/worker/: .env.example  README.md  project.json  pyproject.toml
apps/iatlas/api/: .dockerignore  .env.example  .env.test.example  .gitignore  .pylintrc  Dockerfile  README.md  config.py  docker-entrypoint.sh  iatlasapi.py  install.sh  project.json  pyproject.toml  requirements.txt  run.py  start.sh  uwsgi.ini
apps/iatlas/data/: .env-none  .env.example  Dockerfile  README.md  config.yml  docker-compose.yml  docker-entrypoint.sh  install.sh  prepare-python.sh  project.json  pyproject.toml  pyrightconfig.json  requirements.txt
apps/monorepo/locust/: .gitignore  README.md  project.json  pyproject.toml  run_rate_limit_tests.sh  view_report.sh
apps/openchallenges/data-lambda/: .env.example  .gitignore  Dockerfile  README.md  install.sh  project.json  pyproject.toml  samconfig.toml  template.yaml
apps/openchallenges/edam-etl/: .dockerignore  .env.example  Dockerfile  README.md  docker-entrypoint.sh  install_mariadb.sh  prepare-python.sh  project.json  pyproject.toml
apps/openchallenges/notebook/: .env.example  Dockerfile  README.md  challenge_headlines.json  docker-compose.yml  jupyter_lab_config.py  prepare-python.sh  project.json  pyproject.toml
apps/sandbox/locust/: .gitignore  README.md  locustfile.py  project.json  pyproject.toml
apps/sandbox/observability-python/: .gitignore  Dockerfile  README.md  project.json  pyproject.toml
apps/schematic/api/: .dockerignore  .env.example  .gitignore  .openapi-generator-ignore  Dockerfile  Patient - Manifest.xlsx  Pipfile  README.md  certificate.conf  config.yaml  debug.py  default_config.yaml  dhparam.pem  docker-compose.yml  openapitools.json  prepare-python.sh  prepare_key_certificate.py  project.json  pyproject.toml  pyrightconfig.json  pytest.ini  redirect.conf  save_key_certificate.py  self-signed.conf  ssl-params.conf  tox.ini  uwsgi-nginx-entrypoint.sh  uwsgi.ini
apps/schematic/notebook/: .env.example  docker-compose.yml  jupyter_lab_config.py  prepare-python.sh  project.json  pyproject.toml
libs/bixarena/api-client-python/: README.md  openapitools.json  project.json  pyproject.toml
libs/openchallenges/api-client-python/: .openapi-generator-ignore  README.md  openapitools.json  prepare-python.sh  project.json  pyproject.toml  setup.py  tox.ini
libs/openchallenges/client-python/: README.md  project.json  pyproject.toml
libs/schematic/api-client-python/: .openapi-generator-ignore  README.md  openapitools.json  project.json  pyproject.toml  setup.py
(+17301 files in other folders)
