[tool.black]
line-length = 88

[tool.sqlfluff.core]
templater = "jinja"
dialect = "mysql"
sql_file_exts = ".sql"

[tool.uv.sources.openchallenges_tools]
workspace = true

[tool.uv.sources.openchallenges-api-client-python]
workspace = true

[tool.uv.sources.bixarena-tools]
workspace = true

[tool.uv.workspace]
members = [
  "apps/bixarena/tools",
  "apps/openchallenges/tools",
  "libs/openchallenges/api-client-python"
]

[build-system]
requires = [ "pdm-backend" ]
build-backend = "pdm.backend"

[project]
requires-python = "==3.13.3"
dependencies = [
  "openchallenges_tools",
  "openchallenges-api-client-python",
  "bixarena-tools"
]
name = "sage-monorepo"
version = "1.0.0"
description = ""
readme = "README.md"
package-mode = false

  [[project.authors]]
  name = "Thomas Schaffter"
  email = "thomas.schaffter@gmail.com"

[dependency-groups]
dev = [
  "sqlfluff==3.2.0",
  "ruff==0.12.9",
  "autopep8>=2.3.1",
  "pytest>=8.3.4",
  "pytest-sugar>=1.0.0",
  "pytest-cov>=6.0.0",
  "pytest-html>=4.1.1",
]
