[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Use trailing commas in multi-line collections
skip-magic-trailing-comma = false
# Respect existing line endings
line-ending = "auto"

[tool.ruff.lint]
# Enable basic linting rules
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
]

[tool.sqlfluff.core]
templater = "jinja"
dialect = "mysql"
sql_file_exts = ".sql"

[tool.uv.sources.openchallenges_tools]
workspace = true

[tool.uv.sources.openchallenges-api-client-python]
workspace = true

[tool.uv.sources.bixarena-tools]
workspace = true

[tool.uv.sources.bixarena-api-client-python]
workspace = true

[tool.uv.workspace]
members = [
  "apps/bixarena/tools",
  "apps/openchallenges/tools",
  "libs/bixarena/api-client-python",
  "libs/openchallenges/api-client-python"
]

[build-system]
requires = [ "pdm-backend" ]
build-backend = "pdm.backend"

[project]
requires-python = "==3.13.3"
dependencies = [
  "bixarena-api-client-python",
  "bixarena-tools",
  "openchallenges_tools",
  "openchallenges-api-client-python"
]
name = "sage-monorepo"
version = "1.0.0"
description = ""
readme = "README.md"
package-mode = false

  [[project.authors]]
  name = "Thomas Schaffter"
  email = "thomas.schaffter@gmail.com"

[dependency-groups]
dev = [
  "sqlfluff==3.2.0",
  "ruff==0.12.9",
  "autopep8>=2.3.1",
  "pytest>=8.3.4",
  "pytest-sugar>=1.0.0",
  "pytest-cov>=6.0.0",
  "pytest-html>=4.1.1",
]
