[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Use trailing commas in multi-line collections
skip-magic-trailing-comma = false
# Respect existing line endings
line-ending = "auto"

[tool.ruff.lint]
# Enable basic linting rules
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
]

[tool.sqlfluff.core]
templater = "jinja"
dialect = "mysql"
sql_file_exts = ".sql"

[tool.uv]
constraint-dependencies = [
  "click>=8.3.0,<9",
  "fastapi>=0.119.0,<1",
  "httpx>=0.28.1,<2",
  "pydantic>=2.12.0,<3",
  "starlette>=0.48,<1",
  "uvicorn>=0.37,<1",
]

# Add a [tool.uv.sources.<name>] entry when:
# - The project is listed in [project].dependencies here or in any subproject, AND
# - That project is also a member of this workspace (see [tool.uv.workspace]).
# This tells uv to resolve the dependency from the local workspace instead of PyPI.
# Do NOT add entries for projects that are never depended on by name.
[tool.uv.sources.bixarena-api-client]
workspace = true

[tool.uv.sources.openchallenges-api-client]
workspace = true

[tool.uv.sources.openchallenges-client]
workspace = true

[tool.uv.workspace]
# List here every subproject directory that belongs to this monorepo and should be
# managed by uv (apps, tools, libraries, etc.).
# Always include the path of each local project, regardless of whether it is
# depended on by others or included in root dependencies.
# This is the authoritative list of workspace members.
members = [
  "apps/bixarena/ai-service",
  "apps/bixarena/app",
  "apps/bixarena/infra/cdk",
  "apps/bixarena/tools",
  "apps/openchallenges/infra/cdk",
  "apps/openchallenges/tools",
  "libs/bixarena/api-client-python",
  "libs/openchallenges/api-client-python",
  "libs/openchallenges/client-python"
]

[build-system]
requires = [ "pdm-backend" ]
build-backend = "pdm.backend"

[project]
requires-python = "==3.13.3"

# List here only the distribution names you want installed in the root environment
# when running `uv sync` at the repo root.
# Include:
# - Projects you want to import directly from the root (e.g. in notebooks/scripts).
# - Projects that define CLI entry points you want to run from the root venv.
# Do NOT include libraries that are only needed by other workspace projects;
# they will be installed transitively.
dependencies = [
  "openchallenges-client"
]
name = "sage-monorepo"
version = "1.0.0"
description = ""
readme = "README.md"
package-mode = false

[[project.authors]]
name = "Thomas Schaffter"
email = "thomas.schaffter@gmail.com"

[[project.authors]]
name = "Rong Chai"
email = "rongrong.chai1@gmail.com"

[dependency-groups]
dev = [
  "autopep8>=2.3.1",
  "mkdocs-autorefs>=1.4.2",
  "mkdocs-material>=9.6.21",
  "mkdocs==1.6.1",
  "pytest-cov>=6.0.0",
  "pytest-html>=4.1.1",
  "pytest-sugar>=1.0.0",
  "pytest>=8.3.4",
  "ruff>=0.14.0",
  "sqlfluff>=3.4.2",
]
