[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
authors = [
    {name = "Hallie Swan", email = "hallie.swan@sagebase.org"},
]
requires-python = "==3.11.9"
dependencies = [
    "synapseclient==4.8.0",
    "pymongo==4.7.3",
]
name = "agora-data"
version = "0.1.0"
description = "Agora Data Release"
readme = "README.md"

[dependency-groups]
dev = []
prod = []
test = []

[tool.uv]
default-groups = []
