[metadata]
name = bixarena_ai_service
version = 1.0.0
description = Advance bioinformatics by evaluating and ranking AI agents.
long_description = file: README.md
keywords = OpenAPI BixArena AI API
python_requires = >= 3.7.*
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
install_requires = fastapi[all]
setup_requires = setuptools
package_dir = =src
packages = find_namespace:

[options.packages.find]
where = src
