[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bixarena-app"
version = "0.2.36"
description = "Bixarena application for serving and evaluating large language models"
readme = "README.md"
requires-python = "==3.13.3"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "aiohttp", "fastapi", "httpx", "markdown2[all]", "nh3", "numpy",
    "prompt_toolkit>=3.0.0", "pydantic", "requests", "rich>=10.0.0",
    "shortuuid", "tiktoken", "uvicorn",
    "accelerate>=0.21", "peft", "sentencepiece", "torch", "transformers>=4.31.0", "protobuf", "openai>=1.0",
    "gradio>=4.10", "plotly"
    "bixarena-api-client-python"
]

[project.optional-dependencies]
dev = ["black==23.3.0", "pylint==2.8.2"]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.uv.sources]
bixarena-api-client-python = { workspace = true }