[tool.coverage.run]
branch = true
source = [ "src" ]

[tool.coverage.report]
exclude_lines = ['if TYPE_CHECKING:']
show_missing = true

[tool.pytest.ini_options]
addopts = """
 --cov
 --cov-fail-under=50
 --cov-report html:'../../../coverage/apps/bixarena/app/html'
 --cov-report xml:'../../../coverage/apps/bixarena/app/coverage.xml'
 --html='../../../reports/apps/bixarena/app/unittests/html/index.html'
 --junitxml='../../../reports/apps/bixarena/app/unittests/junit.xml'
"""

[project]
name = "bixarena-app"
version = "1.0.0"
description = "Bixarena application for serving and evaluating large language models"
requires-python = "==3.13.3"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "aiohttp", "fastapi", "httpx", "markdown2[all]", "nh3", "numpy",
    "prompt_toolkit>=3.0.0", "pydantic", "requests", "rich>=10.0.0",
    "shortuuid", "tiktoken", "uvicorn",
    "accelerate>=0.21", "peft", "sentencepiece", "torch", "transformers>=4.31.0", "protobuf", "openai>=1.0",
    "gradio>=4.10", "plotly",
    "bixarena-api-client"
]

[tool.hatch.build.targets.wheel]
packages = ["bixarena_app"]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
exclude = [
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "dist",
]

line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]
ignore = []

fixable = ["ALL"]
unfixable = []

[tool.uv.sources]
bixarena-api-client = { workspace = true }