[tool.coverage.run]
branch = true
source = [ "bixarena_tools" ]

[tool.coverage.report]
exclude_lines = ['if TYPE_CHECKING:']
show_missing = true

[tool.pytest.ini_options]
addopts = """
 --cov
 --cov-fail-under=100
 --cov-report html:'../../../coverage/apps/bixarena/tools/html'
 --cov-report xml:'../../../coverage/apps/bixarena/tools/coverage.xml'
 --html='../../../reports/apps/bixarena/tools/unittests/html/index.html'
 --junitxml='../../../reports/apps/bixarena/tools/unittests/junit.xml'
"""

[project]
name = "bixarena-tools"
version = "1.0.0"
description = "Bradley-Terry evaluation and ranking tools for BixArena"
requires-python = "==3.13.3"
readme = 'README.md'
dependencies = [
    "pandas>=2.1.0",
    "numpy>=1.26.0", 
    "scipy>=1.11.0"
]

[project.scripts]
bixarena-eval = "bixarena_tools.run_evaluation:main"

[tool.hatch.build.targets.wheel]
packages = ["bixarena_tools"]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
exclude = [
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "dist",
]

line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]
ignore = []

fixable = ["ALL"]
unfixable = []
