[tool.coverage.run]
branch = true
source = [ "bixarena_tools" ]

[tool.coverage.report]
exclude_lines = ['if TYPE_CHECKING:']
show_missing = true

[tool.pytest.ini_options]
addopts = """
 --cov
 --cov-report html:'../../../coverage/apps/bixarena/tools/html'
 --cov-report xml:'../../../coverage/apps/bixarena/tools/coverage.xml'
 --html='../../../reports/apps/bixarena/tools/unittests/html/index.html'
 --junitxml='../../../reports/apps/bixarena/tools/unittests/junit.xml'
"""

[project]
name = "bixarena-tools"
version = "1.0.0"
description = "BixArena Tools"
requires-python = "==3.13.3"
readme = 'README.md'
dependencies = [
    "numpy>=1.26.0",
    "scipy>=1.11.0", 
    "tqdm>=4.60.0",
    "typer>=0.12.3",
    "rich>=13.7.0"
]

[tool.hatch.build.targets.wheel]
packages = ["bixarena_tools"]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
exclude = [
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "dist",
]

line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]
ignore = []

fixable = ["ALL"]
unfixable = []
