[tool.poetry]
name = "iatlas-api"
version = "0.1.0"
description = ""
authors = [
  "Andrew Lamb <andrew.lamb@sagebionetworks.org>",
  "Jon Ryser <jon.ryser@genui.com>",
  "Thomas Schaffter <thomas.schaffter@sagebionetworks.org>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
