[tool.pytest.ini_options]
log_cli = true
mocked_sessions = "api.db.session"
testpaths = ["tests"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
authors = [
    {name = "Andrew Lamb", email = "andrew.lamb@sagebionetworks.org"},
    {name = "Jon Ryser", email = "jon.ryser@genui.com"},
    {name = "Thomas Schaffter", email = "thomas.schaffter@sagebionetworks.org"},
]
requires-python = "==3.8.20"
dependencies = [
    "ariadne==0.13.0",
    "click==7.1.2",
    "flask==1.1.2",
    "flask-sqlalchemy==2.4.3",
    "graphql-core==3.1.0",
    "itsdangerous==1.1.0",
    "jinja2==2.11.2",
    "markupsafe==1.1.1",
    "psycopg2-binary==2.8.5",
    "sqlalchemy==1.3.17",
    "starlette==0.13.4",
    "typing-extensions==3.7.4.2",
    "werkzeug==1.0.1",
]
name = "iatlas-api"
version = "0.1.0"
description = ""
readme = "README.md"

[dependency-groups]
dev = [
    "autopep8==1.5.4",
    "pylint==2.6.0",
    "pylint-flask-sqlalchemy==0.2.0",
    "pytest==6.1.2",
    "pytest-cov==2.10.1",
    "pytest-flask-sqlalchemy==1.0.2",
    "pytest-xdist==2.1.0",
    "snakeviz==2.1.0",
]
prod = [
    "uWSGI==2.0.28",
]
test = []