[tool.poetry]
name = "iatlas-data"
version = "0.1.0"
description = ""
authors = ["andrewelamb <andrewelamb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
schematic-db = {version = "0.1.5", extras = ["postgres", "synapse"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
