[project]
name = "monorepo-locust"
version = "0.1.0"
description = "Monorepo Locust"
requires-python = "==3.13.3"
readme = 'README.md'
dependencies = [
    "locust>=2.35.0"
]

[tool.hatch.build.targets.wheel]
packages = ["bixarena_tools"]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
exclude = [
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "dist",
]

line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]
ignore = []

fixable = ["ALL"]
unfixable = []

[tool.locust]
# locustfile = ""
headless = false
# master = false
# expect-workers = 5
# host = ""
users = 1
spawn-rate = 1
run-time = "2m"
csv = "locust"
# tags = ["Critical", "Normal"]