[tool.poetry]
name = "sandbox-lambda-python"
version = "0.1.0"
description = "A containerized AWS Lambda example for Python"
authors = ["Thomas Schaffter <thomas.schaffter@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13.0"
requests = "2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
