[tool.poetry]
name = "openchallenges-edam-etl"
version = "0.1.0"
description = "OpenChallenges EDAM ETL"
authors = ["Thomas Schaffter <thomas.schaffter@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
