[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
authors = [
    {name = "Thomas Schaffter", email = "thomas.schaffter@gmail.com"},
    {name = "Maria Diaz", email = "maria.diaz@sagebionetworks.com"},
]
requires-python = "==3.12.8"
dependencies = [
    "pandas==2.2.1",
    "requests==2.31.0",
    "regex==2023.12.25",
]
name = "openchallenges-edam-etl"
version = "0.1.0"
description = "OpenChallenges EDAM ETL"
readme = "README.md"

[dependency-groups]
dev = []
prod = []
test = []

[tool.uv]
default-groups = []