[tool.poetry]
name = "openchallenges-notebook"
version = "0.1.0"
description = "OpenChallenges notebooks"
authors = ["Thomas Schaffter <thomas.schaffter@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "3.10.12"
kaggle = "1.5.12"
openchallenges-client = {path = "../../../libs/openchallenges/api-client-python"}
openai = "0.28.1"
python-dotenv = "1.0.0"
boto3 = "1.28.72"
langchain = "0.0.324"
transformers = "4.34.1"
anthropic = "0.5.0"

[tool.poetry.group.dev.dependencies]
jupyterlab = "3.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
