[tool.coverage.run]
branch = true
source = [ "sandbox_locust" ]

[tool.coverage.report]
exclude_lines = [ "if TYPE_CHECKING:" ]
show_missing = true

[tool.poetry]
name = "sandbox-locust"
version = "1.0.0"
description = ""
authors = [ ]
license = "Proprietary"
readme = "README.md"

  [[tool.poetry.packages]]
  include = "sandbox_locust"

  [tool.poetry.dependencies]
  python = "3.10.14"
  locust = "2.31.8"

[tool.poetry.group.dev.dependencies]
autopep8 = "2.0.2"
flake8 = "6.0.0"
pytest = "7.3.1"
pytest-sugar = "0.9.7"
pytest-cov = "4.1.0"
pytest-html = "3.2.0"

[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"
