[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
authors = [
    {name = "Thomas Schaffter", email = "thomas.schaffter@sagebionetworks.org"},
]
requires-python = "==3.13.3"
dependencies = [
    "opentelemetry-api==1.34.1",
    "opentelemetry-exporter-otlp==1.34.1",
    "opentelemetry-instrumentation-logging==0.55b1",
    "opentelemetry-sdk==1.34.1",
]
name = "sandbox-observability-python"
version = "0.1.0"
description = "An example Python project for testing observability features."
readme = "README.md"

[dependency-groups]
dev = []
prod = []
test = []

[tool.uv]
default-groups = []
