[tool.poetry]
name = "schematic-api"
version = "0.1.0"
description = "Schematic REST API"
authors = ["Thomas Schaffter <thomas.schaffter@gmail.com>"]
readme = "README.md"
packages = [{include = "schematic_api"}]

[tool.poetry.dependencies]
python = "3.10.12"
connexion = {version = "2.14.1", extras = ["swagger-ui"]}
swagger-ui-bundle = "0.0.9"
python-dateutil = "2.8.2"
Flask = "2.1.3"
Flask-Cors = "3.0.10"
schematicpy = "23.12.1"
# jsonschema isn't a direct import, but is used by connexion. 
# This is to avoid deprecationWarnings
# See https://sagebionetworks.jira.com/browse/FDS-1324
jsonschema = ">=4.0.0 <4.10.0"

[tool.poetry.group.dev.dependencies]
black = "23.7.0"
mypy = "^1.4.1"
pylint = "^2.17.4"


[tool.poetry.group.prod.dependencies]
uWSGI = "2.0.21"

[tool.poetry.group.test.dependencies]
pytest = "7.2.0"
pytest-cov = "4.0.0"
pytest-randomly = "3.12.0"
Flask-Testing = "0.8.1"
tox = "4.0.18"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
