[tool.poetry]
name = "schematic-api"
version = "0.1.0"
description = "Schematic REST API"
authors = ["Thomas Schaffter <thomas.schaffter@gmail.com>"]
readme = "README.md"
packages = [{include = "schematic_api"}]

[tool.poetry.dependencies]
python = "3.10.14"
connexion = {version = "2.14.1", extras = ["swagger-ui"]}
swagger-ui-bundle = "0.0.9"
python-dateutil = "2.8.2"
Flask = "2.2.5"
Flask-Cors = "3.0.10"
schematicpy = "24.7.2"
environs = "^11.0.0"
uwsgi = "^2.0.22"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
pylint = "3.2.7"


[tool.poetry.group.prod.dependencies]
uWSGI = "^2.0.22"

[tool.poetry.group.test.dependencies]
pytest = "7.2.0"
pytest-cov = "4.0.0"
pytest-randomly = "3.12.0"
Flask-Testing = "0.8.1"
tox = "4.0.18"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
