[tool.poetry]
name = "schematic-notebook"
version = "0.1.0"
description = "Schematic notebooks"
authors = ["Thomas Schaffter <thomas.schaffter@gmail.com>"]
readme = "README.md"
packages = [{include = "schematic_notebook"}]

[tool.poetry.dependencies]
python = "3.9.2"
schematic-client = {path = "../../../libs/schematic/api-client-python"}


[tool.poetry.group.dev.dependencies]
jupyterlab = "3.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
