[tool.poetry]
name = "openchallenges-client"
version = "1.0.0"
description = "OpenChallenges REST API"
authors = ["Support <team@openapitools.org>"]
license = "Apache 2.0"
readme = "README.md"
repository = "https://github.com/GIT_USER_ID/GIT_REPO_ID"
keywords = ["OpenAPI", "OpenAPI-Generator", "OpenChallenges REST API"]
include = ["openchallenges_client/py.typed"]

[tool.poetry.dependencies]
python = "^3.8"
urllib3 = ">= 1.25.3, < 2.1.0"
python-dateutil = ">=2.8.2"
pydantic = ">=2"
typing-extensions = ">=4.7.1"

[tool.poetry.group.dev.dependencies]
aenum = "3.1.11"
black = "23.7.0"

[tool.poetry.group.test.dependencies]
pytest = "7.2.0"
pytest-cov = "4.0.0"
pytest-randomly = "3.12.0"
tox = "4.0.18"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
