[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
authors = [
    {name = "Thomas Schaffter", email = "thomas.schaffter@gmail.com"},
]
requires-python = "==3.13.3"
dependencies = [
    "urllib3>=2.1.0,<3.0.0",
    "python-dateutil>=2.8.2",
    "pydantic>=2",
    "typing-extensions>=4.7.1",
]
name = "openchallenges"
version = "0.1.0"
description = "Discover, explore, and contribute to open biomedical challenges"
readme = "README.md"

[dependency-groups]
dev = [
    "flake8>=4.0.0",
    "mypy>=1.5",
    "tox>=3.9.0",
]
test = [
    "pytest>=7.2.1",
    "pytest-cov>=2.8.1",
    "types-python-dateutil>=2.8.19.14",
]

[tool.uv]
default-groups = ["dev", "test"]
